--- a/main/yana/part3/p114-nsa/p114/index.html
+++ b/main/yana/part3/p114-nsa/p114/index.html
@@ -10,6 +10,8 @@
 
     <title>Index</title>
 
+    <script src="../../../../../setup/js/qrcode.js"></script> 
+
     <link href="../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
@@ -66,7 +68,7 @@
                   <a  href="Screen Shot 2020-12-25 at 3.47.35 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-25 at 3.47.35 PM.png.resized.jpg"></a>
                               <div class="card-body darkdiv">
                       
-                      <div style='text-align: left;'>#hashtags <a href="../hash/borders.html">#borders</a>  <a href="../hash/chaos.html">#chaos</a>  <a href="../hash/gbi.html">#gbi</a>  <a href="../hash/insecurity.html">#insecurity</a>  <a href="../hash/iran.html">#iran</a>  <a href="../hash/isis.html">#isis</a>  <a href="../hash/low-orbit-ion-cannon.html">#low-orbit-ion-cannon</a>  <a href="../hash/matrix.html">#matrix</a>  <a href="../hash/nsa.html">#nsa</a>  <a href="../hash/nukes.html">#nukes</a>  <a href="../hash/red.html">#red</a>  <a href="../hash/red-pill.html">#red-pill</a>  <a href="../hash/roe.html">#roe</a>  <a href="../hash/security.html">#security</a>  <a href="../hash/snowden.html">#snowden</a>  <a href="../hash/student.html">#student</a>  <a href="../hash/super-hacker-deluxe.html">#super-hacker-deluxe</a>  <a href="../hash/teacher.html">#teacher</a>  <a href="../hash/the-powers.html">#the-powers</a>  <a href="../hash/usa.html">#usa</a>  <a href="../hash/wp.html">#wp</a>  <a href="../hash/ww.html">#ww</a>  <a href="../hash/ww0.html">#ww0</a> </div><span id='foohash'><br><br>
+                      <div style='text-align: left;'>#hashtags</div><span id='foohash'><br><br>
                       <div style='text-align: left;'>Message to NSA<br />
 <br />
 December 24, 2015<br />
@@ -126,6 +128,17 @@ at least you&rsquo;ve escaped a matrix.&rdquo;<br />
         <p class="float-right">
           <!--<a href="trilogy.html">🐇</a>-->
         </p>
+        <center><div id="qrcode"></div></center><br><br>
+        <script type="text/javascript">
+          var qrcode = new QRCode("qrcode", {
+              text: window.location.href,
+              width: 300,
+              height: 300,
+              colorDark : "#000000",
+              colorLight : "#ffffff",
+              correctLevel : QRCode.CorrectLevel.H
+          });
+        </script>
         <p>Thanks <a href="https://getbootstrap.com/docs/4.0/examples/album/">Bootstrap</a>!</p>
       </div>
     </footer>
