--- a/main/zzz-bin/bin/index.html
+++ b/main/zzz-bin/bin/index.html
@@ -115,7 +115,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="jumbo-box/index.html"><img class="card-img-top image-file" src="jumbo-box/Screen Shot 2020-12-26 at 7.00.49 PM.png.resized.jpg"></a>
+                  <a  href="jumbo-box/index.html"><img class="card-img-top image-folder" src="jumbo-box/Screen Shot 2020-12-26 at 7.00.49 PM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
                       <a href="jumbo-box/index.html">jumbo-box</a>
