--- a/main/zzz-bin/bin/jumbo-box/box/box/box/box/red/inside/index.html
+++ b/main/zzz-bin/bin/jumbo-box/box/box/box/box/red/inside/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/jumbo-box/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/jumbo-box/box/box/box/box/red/inside/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>jumbo-box</b></h3>
+          <h3><b>inside</b></h3>
         </div>
       </section>
 
@@ -65,22 +65,37 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-26 at 7.00.49 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-26 at 7.00.49 PM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-26 at 8.12.02 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-26 at 8.12.02 PM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      <div style='text-align: left;'>= 35090<br />
+                      <div style='text-align: left;'>rt. ee Oe Tal 97, fos<br />
+$F Le air Se<br />
+ie Seti<br />
 <br />
-&mdash;<br />
+Late ong even Ng, re)<br />
 <br />
-&quot;. Dry Erase Lapboards<br />
+Band Mukume&eacute; were<br />
+Bscthing arourd &cent;<br />
+Bcamptire &cent; L<br />
 <br />
-A0 yy Borrar Lapboards Sec Lapboards effacables 4 sec<br />
+lhacke ard. Cricke<br />
 <br />
-Jumlose<br />
+cherp ed. A ah&euro; breeze<br />
+Fang the chimes.<br />
 <br />
-eal<br />
-Glass Pack<br />
+In ~% gucet vocce,<br />
+<br />
+as told _&laquo; slags<br />
+<br />
+OV<br />
+whegle st Ga<br />
+Be erst. So theres<br />
+Be &ldquo;Va4s A Starees<br />
+For lae fiefs<br />
+&euro;arteng pocat ae<br />
+caducsm. There's<br />
+bol sak OAceee<br />
 <br />
  <br />
 </div>
@@ -92,23 +107,7 @@ Glass Pack<br />
             </div>
 
 
-              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="box/index.html"><img class="card-img-top image-folder" src="box/Screen Shot 2020-12-26 at 8.06.13 PM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="box/index.html">box</a>
 
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>
 
         </div>
       </div>
