about to do flw

--- a/main/zzz-bin/bin/bin/index.html
+++ b/main/zzz-bin/bin/bin/index.html
@@ -78,7 +78,87 @@
             </div>
 
 
+              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="first-loser-wins/index.html"><img class="card-img-top image-file" src="../../../../setup//img/no-image.png"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="first-loser-wins/index.html">first-loser-wins</a>
 
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="prose/index.html"><img class="card-img-top image-file" src="../../../../setup//img/no-image.png"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="prose/index.html">prose</a>
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="router/index.html"><img class="card-img-top image-file" src="../../../../setup//img/no-image.png"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="router/index.html">router</a>
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="spin/index.html"><img class="card-img-top image-file" src="../../../../setup//img/no-image.png"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="spin/index.html">spin</a>
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="vans/index.html"><img class="card-img-top image-file" src="../../../../setup//img/no-image.png"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="vans/index.html">vans</a>
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>
 
         </div>
       </div>
