--- a/main/zzz-bin/bin/bin/router/index.html
+++ b/main/zzz-bin/bin/bin/router/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/plastic-box/box/science/inside/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/router/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>inside</b></h3>
+          <h3><b>router</b></h3>
         </div>
       </section>
 
@@ -65,21 +65,11 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-26 at 9.19.56 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-26 at 9.19.56 PM.png.resized.jpg"></a>
+                  <a  href="missing.resized.jpg"><img class="card-img-top image-file" src="missing.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      <div style='text-align: left;'>rn<br />
-8<br />
-=<br />
-ww<br />
-g<br />
-b=<br />
-faq<br />
-ry<br />
-<br />
- <br />
-</div>
+                      
                     </div>
                 </div>
               </div>
@@ -88,39 +78,7 @@ ry<br />
             </div>
 
 
-              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="box/index.html"><img class="card-img-top image-folder" src="box/Screen Shot 2020-12-26 at 9.21.02 PM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="box/index.html">box</a>
 
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="grace/index.html"><img class="card-img-top image-file" src="grace/Screen Shot 2020-12-26 at 9.20.33 PM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="grace/index.html">grace</a>
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>
 
         </div>
       </div>
