--- a/main/zzz-bin/bin/plastic-box/box/box/box/index.html
+++ b/main/zzz-bin/bin/plastic-box/box/box/box/index.html
@@ -40,7 +40,7 @@
             <img src="../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/plastic-box/box/science/inside/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/plastic-box/box/box/box/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>inside</b></h3>
+          <h3><b>box</b></h3>
         </div>
       </section>
 
@@ -65,21 +65,11 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-26 at 9.19.56 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-26 at 9.19.56 PM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-26 at 9.26.10 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-26 at 9.26.10 PM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      <div style='text-align: left;'>rn<br />
-8<br />
-=<br />
-ww<br />
-g<br />
-b=<br />
-faq<br />
-ry<br />
-<br />
- <br />
-</div>
+                      
                     </div>
                 </div>
               </div>
@@ -93,10 +83,10 @@ ry<br />
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="box/index.html"><img class="card-img-top image-folder" src="box/Screen Shot 2020-12-26 at 9.21.02 PM.png.resized.jpg"></a>
+                  <a  href="empty/index.html"><img class="card-img-top image-file" src="empty/Screen Shot 2020-12-26 at 9.27.24 PM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="box/index.html">box</a>
+                      <a href="empty/index.html">empty</a>
 
                     </p>
                   </div>
@@ -109,10 +99,26 @@ ry<br />
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="grace/index.html"><img class="card-img-top image-file" src="grace/Screen Shot 2020-12-26 at 9.20.33 PM.png.resized.jpg"></a>
+                  <a  href="mason/index.html"><img class="card-img-top image-file" src="mason/Screen Shot 2020-12-26 at 9.26.30 PM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="grace/index.html">grace</a>
+                      <a href="mason/index.html">mason</a>
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="pen/index.html"><img class="card-img-top image-file" src="pen/Screen Shot 2020-12-26 at 9.26.48 PM.png.resized.jpg"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="pen/index.html">pen</a>
 
                     </p>
                   </div>
