--- a/main/zzz-bin/bin/bin/router/index.html
+++ b/main/zzz-bin/bin/bin/router/index.html
@@ -65,11 +65,36 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="missing.resized.jpg"><img class="card-img-top image-file" src="missing.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-27 at 5.35.14 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-27 at 5.35.14 PM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      
+                      <div style='text-align: left;'> <br />
+<br />
+tt) 4)<br />
+<br />
+es<br />
+ee<br />
+Pe ig<br />
+<br />
+Be ed<br />
+Ra<br />
+and Extending WiFi<br />
+<br />
+oer)<br />
+<br />
+1200<br />
+<br />
+ea<br />
+<br />
+eae<br />
+<br />
+Devices<br />
+<br />
+AC1300<br />
+<br />
+up to 13 Gbps<br />
+</div>
                     </div>
                 </div>
               </div>
@@ -78,7 +103,23 @@
             </div>
 
 
+              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="inside/index.html"><img class="card-img-top image-folder" src="inside/Screen Shot 2020-12-27 at 5.35.45 PM.png.resized.jpg"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="inside/index.html">inside</a>
 
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>
 
         </div>
       </div>
