--- a/main/zzz-bin/bin/bin/router/inside/box/box/box/box/box/trust/index.html
+++ b/main/zzz-bin/bin/bin/router/inside/box/box/box/box/box/trust/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../../../../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../../../../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../../../../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/prose/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/router/inside/box/box/box/box/box/trust/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>prose</b></h3>
+          <h3><b>trust</b></h3>
         </div>
       </section>
 
@@ -65,11 +65,28 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-27 at 3.12.36 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-27 at 3.12.36 PM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-27 at 5.55.43 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-27 at 5.55.43 PM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      
+                      <div style='text-align: left;'>3.3 You can&rsquo;t trust me<br />
+<br />
+You will notice that in Chapter 1, I attempted to persuade you<br />
+of the superior beauty of the Tau (hopefully convincingly).<br />
+Then, in Chapter 2, I contradicted myself by saying the Tau<br />
+is wrong (which although satirical, consists entirely of valid<br />
+points). In adgeneral, I would say it would probably be a<br />
+mistake to blindly trust me&mdash;to take my words at face value.<br />
+<br />
+I deliberately lie to you, along with the other Tauists,<br />
+because I hold the strange notion that lying to you might<br />
+help you.<br />
+<br />
+Ihave a fond memory of a mo<br />
+&copy; Soy ah cil<br />
+<br />
+ <br />
+</div>
                     </div>
                 </div>
               </div>
@@ -78,23 +95,7 @@
             </div>
 
 
-              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="inside/index.html"><img class="card-img-top image-folder" src="inside/Screen Shot 2020-12-27 at 3.13.07 PM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="inside/index.html">inside</a>
 
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>
 
         </div>
       </div>
