--- a/main/zzz-bin/bin/bin/router/inside/box/champs/kris-mccray/index.html
+++ b/main/zzz-bin/bin/bin/router/inside/box/champs/kris-mccray/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/prose/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/router/inside/box/champs/kris-mccray/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>prose</b></h3>
+          <h3><b>kris-mccray</b></h3>
         </div>
       </section>
 
@@ -65,11 +65,14 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-27 at 3.12.36 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-27 at 3.12.36 PM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-27 at 5.43.05 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-27 at 5.43.05 PM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
-                      <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      
+                      <div style='text-align: left;'><b>Link</b>: <a href='https://www.sherdog.com/fighter/Kris-McCray-39432'>https://www.sherdog.com/fighter/Kris-McCray-39432</a><br><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
+                      <div style='text-align: left;'>152 Kris McCray 1999 29-11 Regional 2&quot;&deg; Place<br />
+ane ee AAA State Qualifier<br />
+Most Outstanding Wrestler<br />
+</div>
                     </div>
                 </div>
               </div>
@@ -78,23 +81,7 @@
             </div>
 
 
-              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="inside/index.html"><img class="card-img-top image-folder" src="inside/Screen Shot 2020-12-27 at 3.13.07 PM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="inside/index.html">inside</a>
 
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>
 
         </div>
       </div>
