--- a/main/zzz-bin/bin/bin/bin/i-ching/inside/index.html
+++ b/main/zzz-bin/bin/bin/bin/i-ching/inside/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/bin/i-ching/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/bin/i-ching/inside/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>i-ching</b></h3>
+          <h3><b>inside</b></h3>
         </div>
       </section>
 
@@ -65,22 +65,11 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-29 at 11.44.02 AM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-29 at 11.44.02 AM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-29 at 11.44.57 AM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-29 at 11.44.57 AM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      <div style='text-align: left;'>ran es<br />
-nao eo<br />
-<br />
-Ee cea cc<br />
-er ey<br />
-Ere eae yeu)<br />
-<br />
-Everything you need to know to use<br />
-erica sen)<br />
-<br />
- <br />
-</div>
+                      
                     </div>
                 </div>
               </div>
@@ -94,10 +83,42 @@ erica sen)<br />
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="inside/index.html"><img class="card-img-top image-folder" src="inside/Screen Shot 2020-12-29 at 11.44.57 AM.png.resized.jpg"></a>
+                  <a  href="ball/index.html"><img class="card-img-top image-folder" src="ball/Screen Shot 2020-12-29 at 11.45.30 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="inside/index.html">inside</a>
+                      <a href="ball/index.html">ball</a>
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="box/index.html"><img class="card-img-top image-folder" src="box/Screen Shot 2020-12-29 at 11.50.29 AM.png.resized.jpg"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="box/index.html">box</a>
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>              <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <a  href="ganesh/index.html"><img class="card-img-top image-folder" src="ganesh/Screen Shot 2020-12-29 at 11.46.59 AM.png.resized.jpg"></a>
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="ganesh/index.html">ganesh</a>
 
                     </p>
                   </div>
