--- a/main/zzz-bin/bin/bin/bin/index.html
+++ b/main/zzz-bin/bin/bin/bin/index.html
@@ -115,7 +115,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="i-ching/index.html"><img class="card-img-top image-file" src="../../../../../setup//img/no-image.png"></a>
+                  <a  href="i-ching/index.html"><img class="card-img-top image-folder" src="i-ching/Screen Shot 2020-12-29 at 11.44.02 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
                       <a href="i-ching/index.html">i-ching</a>
