--- a/main/zzz-bin/bin/bin/bin/box/box/macbook/inside/box/box/box/index.html
+++ b/main/zzz-bin/bin/bin/bin/box/box/macbook/inside/box/box/box/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../../../../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../../../../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../../../../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/bin/box/box/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/bin/box/box/macbook/inside/box/box/box/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -65,7 +65,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-29 at 3.40.39 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-29 at 3.40.39 PM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-30 at 5.08.54 AM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-30 at 5.08.54 AM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
@@ -83,10 +83,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="empty/index.html"><img class="card-img-top image-file" src="empty/Screen Shot 2020-12-29 at 3.40.54 PM.png.resized.jpg"></a>
+                  <a  href="books/index.html"><img class="card-img-top image-file" src="books/Screen Shot 2020-12-30 at 5.10.46 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="empty/index.html">empty</a>
+                      <a href="books/index.html">books</a>
 
                     </p>
                   </div>
@@ -99,10 +99,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="macbook/index.html"><img class="card-img-top image-folder" src="macbook/Screen Shot 2020-12-30 at 4.59.50 AM.png.resized.jpg"></a>
+                  <a  href="box/index.html"><img class="card-img-top image-folder" src="box/Screen Shot 2020-12-30 at 5.09.18 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="macbook/index.html">macbook</a>
+                      <a href="box/index.html">box</a>
 
                     </p>
                   </div>
