--- a/main/zzz-bin/bin/bin/bin/box/box/macbook/inside/box/box/letter/index.html
+++ b/main/zzz-bin/bin/bin/bin/box/box/macbook/inside/box/box/letter/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../../../../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../../../../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../../../../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/bin/box/box/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/bin/box/box/macbook/inside/box/box/letter/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>box</b></h3>
+          <h3><b>letter</b></h3>
         </div>
       </section>
 
@@ -65,11 +65,33 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-29 at 3.40.39 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-29 at 3.40.39 PM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-30 at 5.05.36 AM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-30 at 5.05.36 AM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      
+                      <div style='text-align: left;'>TIME SENSITIVE<br />
+LEGAL MATERIAL ENCLOSED<br />
+<br />
+eth Avenue<br />
+CA 92105<br />
+<br />
+Pay Mr Michael Gagnon<br />
+<br />
+tothe 3084 Alabarny<br />
+<br />
+order of: &lsquo;San Diego, CA 92104-4082<br />
+$800.00 discount for misdemeanor cases<br />
+<br />
+(UST-BE PRESENTED AT WITIAL CONSULTATION<br />
+<br />
+92104-408285<br />
+<br />
+PERSONAL &amp; CONFIDENTIAL<br />
+<br />
+Hell hyseaabatated heist ty<br />
+<br />
+ <br />
+</div>
                     </div>
                 </div>
               </div>
@@ -78,39 +100,7 @@
             </div>
 
 
-              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="empty/index.html"><img class="card-img-top image-file" src="empty/Screen Shot 2020-12-29 at 3.40.54 PM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="empty/index.html">empty</a>
 
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="macbook/index.html"><img class="card-img-top image-folder" src="macbook/Screen Shot 2020-12-30 at 4.59.50 AM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="macbook/index.html">macbook</a>
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>
 
         </div>
       </div>
