testing magic trick youtube videos

--- a/main/zbg/part-1/Juicy/index.html
+++ b/main/zbg/part-1/Juicy/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../setup/img/favicon.png">
+    <link rel="icon" href="../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../setup/js/qrcode.js"></script> 
+    <script src="../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,13 +37,13 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>./index.html</span>
+            <span style='font-family: "Courier New"'>zbg/part-1/Juicy/index.html</span>
         </a>
 
-                </div>
+        <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
       </div>
     </header>
 
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>main</b></h3>
+          <h3><b>Juicy</b></h3>
         </div>
       </section>
 
@@ -65,12 +65,11 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-23 at 11.09.31 AM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-23 at 11.09.31 AM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-30 at 6.58.49 AM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-30 at 6.58.49 AM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      <div style='text-align: left;'>Yamba<br />
-</div>
+                      
                     </div>
                 </div>
               </div>
@@ -84,10 +83,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="inf/index.html"><img class="card-img-top image-folder" src="inf/Screen Shot 2020-12-21 at 6.44.02 PM.png.resized.jpg"></a>
+                  <a  href="0-megadudes/index.html"><img class="card-img-top image-file" src="0-megadudes/Screen Shot 2020-12-30 at 7.03.01 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="inf/index.html">inf</a>
+                      <a href="0-megadudes/index.html">0-megadudes</a>
 
                     </p>
                   </div>
@@ -100,10 +99,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="tau/index.html"><img class="card-img-top image-folder" src="tau/Screen Shot 2020-12-22 at 1.18.30 PM.png.resized.jpg"></a>
+                  <a  href="1-cash-money/index.html"><img class="card-img-top image-file" src="1-cash-money/Screen Shot 2020-12-30 at 7.06.23 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="tau/index.html">tau</a>
+                      <a href="1-cash-money/index.html">1-cash-money</a>
 
                     </p>
                   </div>
@@ -116,10 +115,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="yana/index.html"><img class="card-img-top image-folder" src="yana/Screen Shot 2020-12-22 at 1.17.18 PM.png.resized.jpg"></a>
+                  <a  href="2-juicy-cash/index.html"><img class="card-img-top image-file" src="2-juicy-cash/juicy-cash-money.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="yana/index.html">yana</a>
+                      <a href="2-juicy-cash/index.html">2-juicy-cash</a>
 
                     </p>
                   </div>
@@ -128,14 +127,21 @@
               <div class="col-md-3">
               </div>
             </div>              <div class="row">
+              <div class="col-md-12">
+                 <center>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/puSkP3uym5k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </center>
+                  <br>
+              </div>
+            </div>              <div class="row">
               <div class="col-md-3">
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="zbg/index.html"><img class="card-img-top image-folder" src="zbg/Screen Shot 2020-12-22 at 1.31.21 PM.png.resized.jpg"></a>
+                  <a  href="3-virtuoso/index.html"><img class="card-img-top image-file" src="../../../../setup//img/no-image.png"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="zbg/index.html">zbg</a>
+                      <a href="3-virtuoso/index.html">3-virtuoso</a>
 
                     </p>
                   </div>
@@ -144,20 +150,11 @@
               <div class="col-md-3">
               </div>
             </div>              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="zzz-bin/index.html"><img class="card-img-top image-folder" src="zzz-bin/IMG_7462.jpg.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="zzz-bin/index.html">zzz-bin</a>
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
+              <div class="col-md-12">
+                 <center>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/w4s6H4ku6ZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </center>
+                  <br>
               </div>
             </div>
 
