--- a/main/zbg/part-1/Juicy/2-juicy-cash/index.html
+++ b/main/zbg/part-1/Juicy/2-juicy-cash/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zbg/index.html</span>
+            <span style='font-family: "Courier New"'>zbg/part-1/Juicy/2-juicy-cash/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>zbg</b></h3>
+          <h3><b>2-juicy-cash</b></h3>
         </div>
       </section>
 
@@ -65,15 +65,51 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-22 at 1.31.21 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-22 at 1.31.21 PM.png.resized.jpg"></a>
+                  <a  href="juicy-cash-money.png.resized.jpg"><img class="card-img-top image-file" src="juicy-cash-money.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      <div style='text-align: left;'>Zen Beer Garden<br />
+                      <div style='text-align: left;'>5000 +<br />
 <br />
-Michael N. Gagnon<br />
+4500 +<br />
 <br />
-December 21, 2020<br />
+4000<br />
+<br />
+3500 +<br />
+<br />
+3000 +<br />
+<br />
+2500 +<br />
+<br />
+2000 +<br />
+<br />
+1500<br />
+<br />
+1000 +<br />
+<br />
+500 +<br />
+<br />
+1982<br />
+<br />
+What does Juicy<br />
+have to do with<br />
+cash money?<br />
+<br />
+1987<br />
+<br />
+1992<br />
+<br />
+1997<br />
+<br />
+2002<br />
+<br />
+2007<br />
+<br />
+2012<br />
+<br />
+ <br />
+<br />
+2017<br />
 </div>
                     </div>
                 </div>
@@ -83,55 +119,7 @@ December 21, 2020<br />
             </div>
 
 
-              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="part-1/index.html"><img class="card-img-top image-folder" src="part-1/Screen Shot 2020-12-30 at 6.55.05 AM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="part-1/index.html">part-1</a>
 
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="part-2/index.html"><img class="card-img-top image-file" src="part-2/Screen Shot 2020-12-30 at 6.55.43 AM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="part-2/index.html">part-2</a>
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="part-3/index.html"><img class="card-img-top image-file" src="part-3/Screen Shot 2020-12-30 at 6.56.20 AM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="part-3/index.html">part-3</a>
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>
 
         </div>
       </div>
